# transcriber

./: config.py  pyproject.toml
src/: __main__.py  db.py  recorder.py  server.py  storage.py  tracing.py  transcribe.py  transcriber.py
